force-app/main/default/objects/Case/fields/Account_ARR__c.field-meta.xml
<CustomField>
    <fullName>Account_ARR__c</fullName>
    <description>MIS-6808</description>
    <formula>Account.fr_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>