force-app/main/default/objects/Case/fields/Applicable_Quote__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Quote__c</fullName>
    <label>Applicable Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>