force-app/main/default/objects/Case/fields/Approval_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Approval_In_Progress__c</fullName>
    <description>Updated from the approval process. Will show the latest approval status</description>
    <label>Last Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Waiting for approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>