force-app/main/default/objects/Case/fields/Approval_Process_GM__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_GM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MIS-6154
will be filled by Case - RT - After Save according to logic who should be the approver gm, according to the user role region</description>
    <label>Approval Process - GM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>