force-app/main/default/objects/Case/fields/Approval_Signed__c.field-meta.xml
<CustomField>
    <fullName>Approval_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>will be triggered from case approval process, once the approval record is approved</description>
    <label>Approval Signed</label>
    <type>Checkbox</type>
</CustomField>