force-app/main/default/objects/Case/fields/Authorized_DocuSign_c__c.field-meta.xml
<CustomField>
    <fullName>Authorized_DocuSign_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-6714
previously Green_Lane_Document__c</description>
    <label>Authorize DocuSign</label>
    <type>Checkbox</type>
</CustomField>