force-app/main/default/objects/Case/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Billing Account muse be related to the selected Case Account</errorMessage>
        <filterItems>
            <field>Zuora__CustomerAccount__c.Zuora__Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <infoMessage>Billing Account muse be related to the selected Case Account</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Zuora__CustomerAccount__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>