force-app/main/default/objects/Case/fields/Billing_Comparison_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Billing_Comparison_Sheet__c</fullName>
    <description>MIS-8277 populated by workato</description>
    <label>Billing Comparison Sheet</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>