force-app/main/default/objects/Case/fields/Billing_Optimization_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Billing_Optimization_Feedback__c</fullName>
    <description>MIS-7665</description>
    <label>Billing Optimization Feedback</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>