force-app/main/default/objects/Case/fields/Billing_Processing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Billing_Processing_Instructions__c</fullName>
    <description>will also be auto populating opp.Billing Processing Instructions</description>
    <label>Billing Processing Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>