force-app/main/default/objects/Case/fields/Case_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_Days__c</fullName>
    <formula>IF(
  IsClosed, 
  ClosedDate - CreatedDate, 
  NOW() - CreatedDate
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age (Days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>