force-app/main/default/objects/Case/fields/Case_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution__c</fullName>
    <label>Case Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permissions</fullName>
            </value>
            <value>
                <fullName>Update &amp; Assistance</fullName>
            </value>
            <value>
                <fullName>General Question &amp; Education</fullName>
            </value>
            <value>
                <fullName>Jira Created</fullName>
            </value>
            <value>
                <fullName>Reports and dashboard</fullName>
            </value>
            <value>
                <fullName>Create New Item</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Mass Update</fullName>
            </value>
            <value>
                <fullName>No Action Item</fullName>
            </value>
            <value>
                <fullName>Requester Didn&apos;t Respond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>