force-app/main/default/objects/Case/fields/Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Type__c</fullName>
    <description>MIS-6324</description>
    <label>Case Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Approval Process</fullName>
            </value>
            <value>
                <fullName>Quote Metrics</fullName>
            </value>
            <value>
                <fullName>Zuora Integration</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Sync Issues</fullName>
            </value>
            <value>
                <fullName>Permissions</fullName>
            </value>
            <value>
                <fullName>Visibility</fullName>
            </value>
            <value>
                <fullName>New Item</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Validation Error</fullName>
            </value>
            <value>
                <fullName>Company Name/Address Change - Open Balance</fullName>
            </value>
            <value>
                <fullName>Company Address Change - Country</fullName>
            </value>
            <value>
                <fullName>Subsidiary Change - Outside SWMB Policy</fullName>
            </value>
            <value>
                <fullName>Change Payment Method  - Mid Term</fullName>
            </value>
            <value>
                <fullName>Amend License Fees</fullName>
            </value>
            <value>
                <fullName>Amend Payment Terms</fullName>
            </value>
            <value>
                <fullName>Amend Payment Frequency</fullName>
            </value>
            <value>
                <fullName>Amend Address</fullName>
            </value>
            <value>
                <fullName>Amend Customer Name</fullName>
            </value>
            <value>
                <fullName>Amend Currency</fullName>
            </value>
            <value>
                <fullName>Replace Contract (Multiple Contracts Signed)</fullName>
            </value>
            <value>
                <fullName>Reassignment</fullName>
            </value>
            <value>
                <fullName>Customer Routing</fullName>
            </value>
            <value>
                <fullName>Internal Escalation</fullName>
            </value>
            <value>
                <fullName>Customer NDA</fullName>
            </value>
            <value>
                <fullName>Customer MSA</fullName>
            </value>
            <value>
                <fullName>Customer Service Order</fullName>
            </value>
            <value>
                <fullName>Waterfall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>