force-app/main/default/objects/Case/fields/Child_Case_Description__c.field-meta.xml
<CustomField>
    <fullName>Child_Case_Description__c</fullName>
    <description>MIS-6383</description>
    <label>Child Case Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>