force-app/main/default/objects/Case/fields/cloudtalk__call_date__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__call_date__c</fullName>
    <label>Call date</label>
    <type>DateTime</type>
</CustomField>