force-app/main/default/objects/Case/fields/cloudtalk__caller_number__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__caller_number__c</fullName>
    <label>Caller number</label>
    <type>Phone</type>
</CustomField>