force-app/main/default/objects/Case/fields/cloudtalk__CallTags__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__CallTags__c</fullName>
    <description>Call tags from CloudTalk service</description>
    <label>Call Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>