force-app/main/default/objects/Case/fields/cloudtalk__CallTagss__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__CallTagss__c</fullName>
    <label>Call Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>