force-app/main/default/objects/Case/fields/cloudtalk__contact_link__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__contact_link__c</fullName>
    <label>Cloudtalk Contact</label>
    <type>Url</type>
</CustomField>