force-app/main/default/objects/Case/fields/cloudtalk__InternalPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__InternalPhoneNumber__c</fullName>
    <label>Cloudtalk Phone Number</label>
    <type>Phone</type>
</CustomField>