force-app/main/default/objects/Case/fields/cloudtalk__recording_link__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__recording_link__c</fullName>
    <label>Call Recording</label>
    <type>Url</type>
</CustomField>