force-app/main/default/objects/Case/fields/Created_Automatically__c.field-meta.xml
<CustomField>
    <fullName>Created_Automatically__c</fullName>
    <defaultValue>&apos;❌&apos;</defaultValue>
    <description>MIS-7602 Mark the Deal Desk child cases as manual or automatic so we know who to respond to</description>
    <label>Created Automatically</label>
    <length>255</length>
    <type>Text</type>
</CustomField>