force-app/main/default/objects/Case/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <description>For List View filter - see cases the user itself created</description>
    <formula>OR(  $User.Id =  Requester__c ,
$User.Id =   Original_Requester__c 
)</formula>
    <label>Current User</label>
    <type>Checkbox</type>
</CustomField>