force-app/main/default/objects/Case/fields/DDQ_Type__c.field-meta.xml
<CustomField>
    <fullName>DDQ_Type__c</fullName>
    <label>DDQ Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Privacy/Compliance</fullName>
            </value>
            <value>
                <fullName>Data Privacy/Compliance/Information Security</fullName>
            </value>
            <value>
                <fullName>Information Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>