force-app/main/default/objects/Case/fields/Did_we_complete_a_DDQ_for_this_client__c.field-meta.xml
<CustomField>
    <fullName>Did_we_complete_a_DDQ_for_this_client__c</fullName>
    <label>Did we complete client DDQ in the past</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>