force-app/main/default/objects/Case/fields/Did_we_try_to_send_the_SMWB_templates__c.field-meta.xml
<CustomField>
    <fullName>Did_we_try_to_send_the_SMWB_templates__c</fullName>
    <label>Did we Try To send a Kit (not used)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>