force-app/main/default/objects/Case/fields/Disable_Completed_Email_Alert__c.field-meta.xml
<CustomField>
    <fullName>Disable_Completed_Email_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>mis-6819</description>
    <label>Disable Completed Email Alert</label>
    <type>Checkbox</type>
</CustomField>