force-app/main/default/objects/Case/fields/Do_Not_Reopen__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Reopen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-6802</description>
    <label>Do Not Reopen</label>
    <type>Checkbox</type>
</CustomField>