force-app/main/default/objects/Case/fields/Do_we_have_a_signed_NDA_in_place__c.field-meta.xml
<CustomField>
    <fullName>Do_we_have_a_signed_NDA_in_place__c</fullName>
    <label>Do we have a signed NDA in place?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No, but there is a contract in place with a confidentiality provision</fullName>
            </value>
            <value>
                <fullName>Yes, and it was uploaded to the Case attachments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>