force-app/main/default/objects/Case/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>Add a Due Date (i.e. on what date must this be completed?)</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>