force-app/main/default/objects/Case/fields/Extension_Reason__c.field-meta.xml
<CustomField>
    <fullName>Extension_Reason__c</fullName>
    <label>Extension Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>