force-app/main/default/objects/Case/fields/Extension_Type__c.field-meta.xml
<CustomField>
    <fullName>Extension_Type__c</fullName>
    <label>Extension Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent Renewal Date Change</fullName>
            </value>
            <value>
                <fullName>Temporary Extension</fullName>
            </value>
            <value>
                <fullName>Trial Extension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>