force-app/main/default/objects/Case/fields/First_Quote_Case__c.field-meta.xml
<CustomField>
    <fullName>First_Quote_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate this is the first case created for the related quote</description>
    <label>First Quote Case</label>
    <type>Checkbox</type>
</CustomField>