force-app/main/default/objects/Case/fields/Flag_to_Finance__c.field-meta.xml
<CustomField>
    <fullName>Flag_to_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-6335



Check true if from approval process: 

Temporary extension crosses quarters 

Permanent extension crosses quarters

Permanent unpaid &gt; 7 days</description>
    <label>Flag to Finance</label>
    <type>Checkbox</type>
</CustomField>