force-app/main/default/objects/Case/fields/Forecasting_hierarchy_updated__c.field-meta.xml
<CustomField>
    <fullName>Forecasting_hierarchy_updated__c</fullName>
    <label>Forecasting hierarchy updated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ticket sent to MIS</fullName>
            </value>
            <value>
                <fullName>Forecasting aligned by MIS</fullName>
            </value>
            <value>
                <fullName>No need on this user</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>