force-app/main/default/objects/Case/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>will be populated by flow - MIS-6215</description>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Billing US</fullName>
            </value>
            <value>
                <fullName>Billing INT</fullName>
            </value>
            <value>
                <fullName>Billing APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>