force-app/main/default/objects/Case/fields/Growth_prioritization__c.field-meta.xml
<CustomField>
    <fullName>Growth_prioritization__c</fullName>
    <label>Growth prioritization</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>