force-app/main/default/objects/Case/fields/If_it_s_a_portal_what_is_the_username_a__c.field-meta.xml
<CustomField>
    <fullName>If_it_s_a_portal_what_is_the_username_a__c</fullName>
    <label>If it&apos;s a portal, what is the username a</label>
    <length>255</length>
    <type>Text</type>
</CustomField>