force-app/main/default/objects/Case/fields/Internal_Case_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Case_Notes__c</fullName>
    <label>Internal Case Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>