force-app/main/default/objects/Case/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Invoice must be related to the selected Case Account</errorMessage>
        <filterItems>
            <field>Zuora__ZInvoice__c.Zuora__Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <infoMessage>Invoice must be related to the selected Case Account</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Zuora__ZInvoice__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>