force-app/main/default/objects/Case/fields/Is_it_a_portal_or_an_attachment__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_portal_or_an_attachment__c</fullName>
    <label>Is it a portal or an attachment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Attachment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>