force-app/main/default/objects/Case/fields/Is_Pro_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Pro_User__c</fullName>
    <formula>OR( Contact.fr_Pro_User_Type__c = &apos;Admin&apos; ,
Contact.fr_Pro_User_Type__c = &apos;User&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Pro User</label>
    <type>Checkbox</type>
</CustomField>