force-app/main/default/objects/Case/fields/Legal_Escalation_reason__c.field-meta.xml
<CustomField>
    <fullName>Legal_Escalation_reason__c</fullName>
    <formula>IF( 
Account.Legal_Escalation__c,
&quot;🛑 &quot; + Account.Legal_Escalation_Reason__c,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Escalation reason</label>
    <type>Text</type>
</CustomField>