force-app/main/default/objects/Case/fields/Legal_Prioritization__c.field-meta.xml
<CustomField>
    <fullName>Legal_Prioritization__c</fullName>
    <label>Legal Prioritization</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>