force-app/main/default/objects/Case/fields/Link_To_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Opportunity__c</fullName>
    <formula>if (!isnull ( Opportunity__c) ,
&apos;https://similarweb.lightning.force.com/lightning/r/Opportunity/&apos; &amp; Opportunity__r.Opportunity_18_ID__c &amp; &apos;/view&apos;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link To Opportunity</label>
    <type>Text</type>
</CustomField>