force-app/main/default/objects/Case/fields/Managed_User__c.field-meta.xml
<CustomField>
    <fullName>Managed_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managed User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cases (Managed User)</relationshipLabel>
    <relationshipName>Case_Managed_User</relationshipName>
    <type>Lookup</type>
</CustomField>