force-app/main/default/objects/Case/fields/Managed_User_Details__c.field-meta.xml
<CustomField>
    <fullName>Managed_User_Details__c</fullName>
    <formula>&apos;Role: &apos; +  Managed_User__r.UserRole.Name + BR()+
&apos;Profile: &apos;+  Managed_User__r.SYSProfileName__c   + BR()+
 &apos;Manager: &apos;+   Managed_User__r.Manager_Name__c    + BR()+

 &apos;ID: &apos; +  Managed_User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Managed User Details</label>
    <type>Text</type>
</CustomField>