force-app/main/default/objects/Case/fields/Multi_Factor_Authentication__c.field-meta.xml
<CustomField>
    <fullName>Multi_Factor_Authentication__c</fullName>
    <label>Multi-Factor Authentication?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>