force-app/main/default/objects/Case/fields/New_Proposed_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Proposed_Renewal_Date__c</fullName>
    <inlineHelpText>Please fill in this field only if Type of Extesion = &quot;Permanent Renewal Date Change&quot;</inlineHelpText>
    <label>New Proposed Renewal Date</label>
    <type>Date</type>
</CustomField>