force-app/main/default/objects/Case/fields/Next_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Renewal_Date__c</fullName>
    <description>MIS-6808</description>
    <formula>Account.fr_Next_Renewal_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Renewal Date</label>
    <type>Date</type>
</CustomField>