force-app/main/default/objects/Case/fields/OPP_ARR__c.field-meta.xml
<CustomField>
    <fullName>OPP_ARR__c</fullName>
    <description>MIS-6808</description>
    <formula>Opportunity__r.ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPP ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>