force-app/main/default/objects/Case/fields/Opp_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Closed_Date__c</fullName>
    <description>MIS-6808</description>
    <formula>Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Closed Date</label>
    <type>Date</type>
</CustomField>