force-app/main/default/objects/Case/fields/Opp_Cycle_Price__c.field-meta.xml
<CustomField>
    <fullName>Opp_Cycle_Price__c</fullName>
    <description>MIS-7873</description>
    <formula>Opportunity__r.Cycle_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Cycle Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>