force-app/main/default/objects/Case/fields/Original_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Renewal_Date__c</fullName>
    <description>MIS-7782</description>
    <formula>Opportunity__r.Original_Renewal_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Renewal Date</label>
    <type>Date</type>
</CustomField>