force-app/main/default/objects/Case/fields/Original_Requester__c.field-meta.xml
<CustomField>
    <fullName>Original_Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cases (Original Requester)</relationshipLabel>
    <relationshipName>Child_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>