force-app/main/default/objects/Case/fields/Parent_Child__c.field-meta.xml
<CustomField>
    <fullName>Parent_Child__c</fullName>
    <formula>IF(
				ISBLANK(ParentId) ,&apos;Parent case 🫅🏻&apos;,&apos;Child Case 👶&apos;
				
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent\Child</label>
    <type>Text</type>
</CustomField>