force-app/main/default/objects/Case/fields/Pending_Requester_Count__c.field-meta.xml
<CustomField>
    <fullName>Pending_Requester_Count__c</fullName>
    <description>MIS-6987 Complete &quot;Pending Requester&quot; Status Exceeding x Days for salesops and deal desk CASE record type</description>
    <label>Pending Requester Count</label>
    <type>Date</type>
</CustomField>