force-app/main/default/objects/Case/fields/Post_Signature_Issues__c.field-meta.xml
<CustomField>
    <fullName>Post_Signature_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Signature Issues</label>
    <type>Checkbox</type>
</CustomField>