force-app/main/default/objects/Case/fields/Q2C_Error_Limitation__c.field-meta.xml
<CustomField>
    <fullName>Q2C_Error_Limitation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-6293</description>
    <label>Q2C Error/Limitation</label>
    <type>Checkbox</type>
</CustomField>