force-app/main/default/objects/Case/fields/Quote_Docusign_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Quote_Docusign_Authorization__c</fullName>
    <formula>Quote__r.Q2C_Green_Lane__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Authorize Docusign</label>
    <type>Checkbox</type>
</CustomField>