force-app/main/default/objects/Case/fields/Records_transferred__c.field-meta.xml
<CustomField>
    <fullName>Records_transferred__c</fullName>
    <label>Records transferred</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manager asked for records receiver</fullName>
            </value>
            <value>
                <fullName>Records transferred</fullName>
            </value>
            <value>
                <fullName>No need on this user</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>