force-app/main/default/objects/Case/fields/Renewal_Quote_Link__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Quote_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Quote Link</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match quote criteria</errorMessage>
        <filterItems>
            <field>$Source.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>zqu__Quote__c.zqu__Opportunity__c</valueField>
        </filterItems>
        <filterItems>
            <field>zqu__Quote__c.zqu__QuoteBusinessType__c</field>
            <operation>equals</operation>
            <value>Renewal (with/without upsell)</value>
        </filterItems>
        <filterItems>
            <field>zqu__Quote__c.zqu_Quote_Status__c</field>
            <operation>equals</operation>
            <value>Approved By Billing, New Amendment, Pending Legal Or Billing request, Pending Rep To Adjust Quote, Terms Approved</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>zqu__Quote__c</referenceTo>
    <relationshipLabel>Cases (Renewal Quote Link)</relationshipLabel>
    <relationshipName>Cases_Renewal_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>