force-app/main/default/objects/Case/fields/Reports_Dashboards__c.field-meta.xml
<CustomField>
    <fullName>Reports_Dashboards__c</fullName>
    <label>Reports &amp; Dashboards</label>
    <type>TextArea</type>
</CustomField>